--- a/ps_jewelry/css/style.css
+++ b/ps_jewelry/css/style.css
@@ -347,3 +347,16 @@ section{
     font-size: 35px;
     padding-top: 20px;
 }
+.rounded-circle {
+    height: 25px;
+    width: 25px;
+    background-color: #dc3545;
+    display: inline-block;
+    text-align: center;
+    color: #ffff;
+    font-weight: bold;
+}
+pre {
+    border: 1px solid #d4d4d4;
+    padding:0px 10px;
+}
